--- a/.env
+++ b/.env
@@ -1,25 +1,11 @@
 
 APIGEE_CLIENT_SECRET_DEV="G9E8Q~tpFWo8qZnlBZKQg.1VkFGQEoY~mARHIcCe"
 APIGEE_CLIENT_SECRET_DEV_SECRET="3b22f0a7-ab54-415c-b766-9673245aa993"
-APIGEE_GENAI_CLIENT_SECRET_DEV = "G6c8Q~110PnYPcEK24RCCdapuGjtdnnBr6bj-aHr"
+GENAI_API_SECRET_DEV = "G6c8Q~110PnYPcEK24RCCdapuGjtdnnBr6bj-aHr"
 APP_ENV="development"
 USER_AGENT = 'myagent'
 HTTP_PROXY="http://proxy-dmz.intel.com:912"
 HTTPS_PROXY="http://proxy-dmz.intel.com:912"
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-APIGEE_CLIENT_SECRET_DEVa="G6c8Q~110PnYPcEK24RCCdapuGjtdnnBr6bj-aHr"
+MONGO_DB_CONNECTION_URL="mongodb://DMS_chat_so:vC60n0dRp6z6322@d1ir1mon021.ger.corp.intel.com:7194,d2ir1mon021.ger.corp.intel.com:7194,d3ir1mon021.ger.corp.intel.com:7194/DMS_chat?ssl=true&replicaSet=mongo7194"
+EDA_IP_TRACKER_DB_PASSWORD_PROD="l0iElPrPaGcGa3r"
